# dnssec-trigger

./: .gitignore  .travis.yml  01-dnssec-trigger-hook.sh.in  01-dnssec-trigger.in  Changelog  INSTALL  LICENSE  Makefile.in  README  README.md  config.h.in  configure  configure.ac  dnssec-trigger-control-setup.sh.in  dnssec-trigger-control.c  dnssec-trigger-hook.plist.in  dnssec-trigger-netconfig-hook.sh.in  dnssec-trigger-osx.sh.in  dnssec-trigger-panel.plist  dnssec-trigger-script.in  dnssec-trigger.8.in  dnssec-triggerd-keygen.service  dnssec-triggerd.plist  dnssec-triggerd.service  dnssec-triggerd.service.in  dnssec.conf  example.conf.in  makedist.sh
compat/: inet_ntop.c  malloc.c
contrib/: 01-dnssec-trigger  01-dnssec-trigger-hook-new_nm  README  dnssec-trigger-script  dnssec.conf.sample
fedora/: dnssec-trigger-resolvconf-handle.sh  dnssec-trigger.spec  dnssec-triggerd-keygen.service  dnssec-triggerd-resolvconf-handle.service  dnssec-triggerd-resolvconf-handle.sh  dnssec-triggerd.init  dnssec-triggerd.service  tmpfiles-unbound.conf  unbound-keygen.service  unbound.service  unbound.spec
osx/: dnssec-trigger-hook.plist.in  dnssec-trigger-osx.sh.in  dnssec-trigger-panel.plist.in  dnssec-trigger-setdns.sh.in  dnssec-triggerd.plist.in  nl.nlnetlabs.dnssec-trigger-hook.plist.in  nl.nlnetlabs.dnssec-trigger-panel.plist.in  nl.nlnetlabs.dnssec-triggerd.plist.in  wakelist.c  wakelist.h
osx/RiggerStatusItem/: RiggerApp.h  RiggerApp.m  RiggerStatusItemAppDelegate.h  RiggerStatusItemAppDelegate.m  RiggerStatusItem_Prefix.pch  config.h  main.m  osxattach.h  osxattach.m
osx/RiggerStatusItem/English.lproj/: MainMenu.xib
osx/RiggerStatusItem/RiggerStatusItem.xcodeproj/: project.pbxproj  project.pbxproj.in
osx/pkg/: makepackage
panel/: attach.c  attach.h  dnssec-trigger-panel.desktop.in  panel.c  pui.xml
riggerd/: cfg.c  cfg.h  connection_list.c  connection_list.h  fptr_wlist.c  fptr_wlist.h  fwd_zones.c  fwd_zones.h  http.c  http.h  lock.c  lock.h  log.c  log.h  mini_event.c  mini_event.h  net_help.c  net_help.h  netevent.c  netevent.h  probe.c  probe.h  rbtree.c  reshook.c  reshook.h  riggerd.c  store.c  store.h  string_buffer.h  string_list.c  string_list.h  svr.c  svr.h  ubhook.c  ubhook.h  update.c  update.h  winsock_event.c  winsock_event.h
test/: clang-analysis.sh  json.c  list_forwards_example  list_local_zones_example  other.c  servers-list-ipv4  unbound-control-fake.sh
test/tmp/: commit-cache
winrc/: dnssec-trigger-keygen.c  gen_msg.mc  gtkrc  netlist.c  netlist.h  panel.manifest  rsrc_control.rc  rsrc_keygen.rc  rsrc_panel.rc  rsrc_triggerd.rc  setup.nsi  trayicon.c  vista_admin.manifest  vista_user.manifest  w_inst.c  w_inst.h  win_svc.c  win_svc.h
winrc/proc_dll_src/: exdll.c  make.sh  processes.c  processes.h  processes.sln  processes.vcproj  stdafx.h
